# tsv-bue-tennis-app

./: .gitignore  Caddyfile  DEPLOYMENT.md  Dockerfile  README.md  TYPE_GENERATION.md  compose.yaml  deploy.sh
.github/workflows/: ci.yml  deploy.yml  test-deploy.yml
backend/: .env.example  .gitignore  Cargo.toml  README.md
backend/src/: auth.rs  config.rs  database.rs  email.rs  lib.rs  main.rs  member_selection.rs  models.rs  teable.rs  token_store.rs  ts_bindings.rs  utils.rs
tsv-tennis-app/: .env.development  .env.example  .gitignore  TYPE_GENERATION.md  index.html  package-lock.json  package.json  sync-types.sh  tsconfig.json  vite.config.ts
tsv-tennis-app/src/: App.tsx  main.tsx
tsv-tennis-app/src/components/: ArbeitsstundenFormModal.tsx  DeleteConfirmDialog.tsx  Footer.tsx  MemberSelection.tsx  ProtectedRoute.tsx
tsv-tennis-app/src/context/: AuthContext.tsx
tsv-tennis-app/src/hooks/: useDashboard.ts
tsv-tennis-app/src/pages/: Dashboard.tsx  Datenschutz.tsx  ForgotPassword.tsx  Impressum.tsx  Login.tsx  ResetPassword.tsx
tsv-tennis-app/src/schemas/: validation.js
tsv-tennis-app/src/services/: backendService.js  backendService.ts
tsv-tennis-app/src/types/: index.ts
tsv-tennis-app/src/utils/: entryUtils.ts  utils.ts
