[package]
name = "tsv-tennis-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate-types"
path = "src/bin/generate_types.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower_governor = { version = "0.4", features = ["tracing"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.0"
bcrypt = "0.15"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder", "hostname"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }
chrono-tz = "0.8"
specta = { version = "1.0.5", features = ["chrono", "uuid", "export"] }
specta-typescript = "0.0.7"
